# Zelix

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.Md  README.md  SECURITY.md  STYLE_GUIDE.md  build.bat  build.sh  deno.json  go.mod  go.sum  main.c  main.cpp  main.go  main.ts
.github/: dependabot.yml
.github/workflows/: codacy.yml  codeql.yml
analyzer/: analyzer.cpp  analyzer.h  arithmeticAnalyzer.go  boolAnalyzer.go  conditionalAnalyzer.go  elseAnalyzer.go  error.h  forAnalyzer.go  funAnalyzer.go  genericAnalyzer.go  identifierAnalyzer.go  mainFunctionAnalyzer.go  methodAnalyzer.go  modAnalyzer.go  objectCreationAnalyzer.go  propAnalyzer.go  propertyAnalyzer.go  result.h  returnAnalyzer.go  rootAnalyzer.go  semanticAnalyzer.go  statementAnalyzer.go  staticAnalyzer.go  trace.h  typeAnalyzer.go  variableAnalyzer.go  warn.h
analyzer/error/: error.go
analyzer/format/: caseChecker.go
analyzer/object/: object.go
analyzer/pool/: errorPool.go
analyzer/property/: evaluateLastPropValue.go
analyzer/queue/: blockQueue.go  expectedPair.go
analyzer/rule/: analyzer.go
analyzer/stack/: stack.go
analyzer/tool/: declaration.h  ref.h
analyzer/variable/: variable.go
ansi/: ansi.go  colors.go
ast/: ast.go  ast.h  fileCode.go  function.go  parser.go  rule.go  rule.h  surfMod.go  surfVariable.go
benchmark/: 2025-January-2-0-58-51-bench.txt  2025-January-2-1-13-38-bench.txt  2025-January-2-1-16-24-bench.txt  2025-January-2-1-17-49-bench.txt  2025-January-7-20-52-34-bench.txt  2025_February_02 21_43_56-bench.txt
c_parser/: Cargo.toml
c_parser/src/: class.rs  function.rs  header.rs  lib.rs  wrapper.rs
checker/: Cargo.toml  arithmeticAnalyzer.go  funAnalyzer.go  identifierAnalyzer.go  mainFunctionAnalyzer.go  semanticAnalyzer.go  statementAnalyzer.go
checker/src/: function_checker.rs  header_checker.rs  import_checker.rs  lib.rs  main_function_checker.rs  scope_checker.rs  variable_checker.rs
checker/src/body/: mod.rs  scope_checker.rs  variable.rs  variable_checker.rs  variable_value_checker.rs
checker/src/function/: function_checker.rs  function_return_checker.rs  lifetime_checker.rs  main_function_checker.rs  mod.rs
checker/src/header/: header_checker.rs  mod.rs
checker/src/types/: mod.rs  parser.rs
cli/: Cargo.toml  app.h  args.h  benchmarkCommand.go  buildCommand.go  checkCommand.go  headerMessage.go  index.ts  initCommand.go  licenseCommand.go  runCommand.go  value.h
cli/command/: init.ts  license.ts  run.ts  version.ts
cli/generic/: GenericCommand.ts  commandList.ts  exampleSurfScript.ts
cli/lib/: question.ts  readKeys.ts  retrievePath.ts
cli/message/: header.ts
cli/src/: lib.rs
code/: Cargo.toml  function.go  surfMod.go  surfVariable.go  token.go  token_type.go  zyroMod.go  zyroVariable.go
code/mod/: fluentMod.go  zyroMod.go
code/src/: lib.rs  token.rs
code/types/: fluentObjectTypes.go  zyroObjectTypes.go
code/wrapper/: fluentObject.go  fluentVariable.go  typeWrapper.go  zyroObject.go  zyroVariable.go
command/: check.h  compile.h
concurrent/: typedConcurrentMap.go  typedConcurrentSlice.go
container/: external_string.h  owned_string.h  vector.h
core/: Cargo.toml  commaSplitter.ts  functionExtractor.ts  importExtractor.ts  interpreter.go  tokensExtractor.ts
core/object/: Import.ts
core/src/: lib.rs  unused.rs
core/stack/: stack.go  static_stack.go
example/: Surf.yml  arith.fluent  arith.zx  block.fluent  example.fluent  example.surf  example.zyro  loop.fluent  main.fluent  main.zx  nested.fluent  package.fluent  prop.fluent  type.zx
example/src/: a.surf  b.surf  c.surf  d.surf  main.surf
except/: exception.h
extractor/: Cargo.toml
extractor/src/: import_extractor.rs  lib.rs  return_extractor.rs  sentence_extractor.rs  standard_locator.rs  token_splitter.rs
file/: declaration.h  derivable.h  file.h  file_reader.h  function.h  mod.h  program.h  symbol.h
file/exception/: unresolved_symbol.h
file/rule/: package.h
file_code/: declaration.h  file_code.h  function.h  mod.h  type.h
file_code/converter/: converter.cpp  converter.h  function.h  import.h  mod.h
filecode/: filecode.go
filecode/converter/: converter.go
filecode/function/: function.go  param.go
filecode/module/: module.go
filecode/trace/: trace.go
filecode/types/: parser.go  typeWrapper.go
global/: constants.h
global/err/: print.cpp  print.h
global/messages/: import.h
global/trace/: trace.h
ir/: ir.go  irBuilder.go
ir/engine/: irMarshal.go
ir/pool/: blockPool.go  counterPool.go  numPool.go  stringPool.go
ir/queue/: expressionQueue.go
ir/relocate/: remaining.go
ir/tree/: blockMarshalElement.go  instructionTree.go  marshalPair.go  (+1 more)
lexer/: Cargo.toml  error.go  error.h  index.ts  lexer.cpp  lexer.go  lexer.h  map.go  stream.h  token.h  tokenMap.go  token_map.go
list/: list.h
logger/: Cargo.toml  logger.go  logger.h
memory/: allocator.cpp  allocator.h
message/: generator.h  lexer_error_converter.h
object/: surfMod.go  surfObject.go  zyroObject.go
parser/: Cargo.toml  ast.h  error.h  expect.cpp  expect.h  extractor.cpp  extractor.h  parser.cpp  parser.go  parser.h  split.cpp  split.h  stream.h
parser_samples/: example.txt  example_args.txt  main.txt  prop.txt  prop_nested.txt  stdlib_display  type.txt  type_ptr
pkg/: package.go  packageParser.go
runtime/: write.go
shared/: Cargo.toml  Logger.ts  catchException.ts  throwInvalidDataTypeError.ts
src/: main.rs
stack/: stack.go
standard/: print.c
state/: state.go  state.h
test/: main.rs
time/: timed_task.cpp  timed_task.h
todos/: todos
token/: token.go  token.h  tokenType.go  token_map.h  token_type.go  type.go
tokenUtil/: extractTokensBefore.go  isValidType.go  tokenSplitter.go  tokenToObjType.go  tokenTypeToString.go
type/: type.h
util/: Cargo.toml  absolute.h  anyMatch.go  dirName.go  dirname.h  error.go  file.go  fileExists.go  isDir.go  mapKeys.go  nested_spaces.h  orderedMap.go  path.go  read_file.cpp  read_file.h  traceBuilder.go
wrapper/: typeWrapper.go
(+329 files in other folders)
