[package]
name = "Surf-Rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "cli",
    "core",
    "lexer",
    "shared"
]


[dependencies]
cranelift = "0.113.1"
cranelift-jit = "0.113.1"
cranelift-module = "0.113.1"
cranelift-object = "0.113.1"
target-lexicon = "0.12.16"
cranelift-codegen = "0.113.1"
cli = { path = "cli" }