[package]
name = "checker"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lazy_static = "1.5.0"
fancy-regex = "0.14.0"
clang = "2.0.0"
lexer = { path = "../lexer" }
extractor = { path = "../extractor" }
c_parser = { path = "../c_parser" }
logger = { path = "../logger" }
util = { path = "../util" }
code = { path = "../code" }